# hs-show-delta

./: .gitignore  README.md  show-delta.cabal
Data/: ShowDelta.hs
Data/ShowDelta/: Class.hs  TH.hs
test/Data/ShowDelta/: THSpec.hs
